# heart_disease-predictor

./: .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
models/: model.pkl
static/: script.js  style.css
templates/: index.html
training/: train.py
