[project]
name = "heart-disease-prdiction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.35.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]
